--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,6 +17,7 @@
           <h2 class="subtitle">
             You are user number #{{g.user.id}}
           </h2>
+          <p><a href="{{ url_for('logout') }}">Logout</a></p>
         </div>
       </div>
     </section>
