--- a/templates/companies.html
+++ b/templates/companies.html
@@ -24,6 +24,10 @@
           <p><a href="{{ url_for('toggleFavourites',ticker = ticker) }}">{{name}}</a></p>
           </h2>
           {%endfor%}
+
+          <h1 class="title">
+            <p><a href="{{ url_for('analyze') }}"">Analysis</a></p>
+          </h1>
         </div>
       </div>
     </section>
