--- a/templates/edit_notes.html
+++ b/templates/edit_notes.html
@@ -13,24 +13,15 @@
     <section class="hero is-success is-fullheight">
         <div class="hero-body">
           <div class="container">
+            
             <form  method = "POST">
-                Write your notes here!
+                Edit your note here!
                 <br>
-                <input class="input" type="text" name="Notes" placeholder="Write your note here...">
+                <input class="input" type="text" name = 'updated_note' value ="{{note}}">
                 <br>
                 <input type = "submit" value = "Save" />
             </form>
         
-            <h1 class="title">Saved Notes</h1>
-            {%for id,note in user_notes%}
-            <h2 class="subtitle">
-            <p>{{note}}</p>
-            <a href = "{{ url_for('remove_notes',note = note) }}"><button>Delete</button></a>
-            <a href = "{{ url_for('edit_notes',note = note) }}"><button>Edit</button></a>
-            </h2>
-            {%endfor%}
-
-
           </div>
         </div>
     </section>
