--- a/templates/companies.html
+++ b/templates/companies.html
@@ -6,28 +6,66 @@
     <title>Profile Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://kit.fontawesome.com/ca641dffb4.js" crossorigin="anonymous"></script>
+
+    <style>
+            h1 {
+                color:Green;
+            }
+            div.scroll {
+                margin:10px;
+                padding:2% 2%;
+                width: 30%;
+                height: 800px;
+                overflow-x: hidden;
+                overflow-y: auto;
+                text-align:justify;
+                color:black;
+                border-style: solid;
+                background-color:#DCDCDC;
+                border-radius: 2%;
+            }
+        </style>
   </head>
   <body>
     <section class="hero is-success is-fullheight">
+    <div style="text-align: center;padding:20px;font-size:400%;">
+    <p>Manage Your Favourites</p>
+    <hr>
+    </div>
+    
       <div class="hero-body">
-        <div class="container">
-        <h1 class="title">Companies</h1>
-          {%for ticker,name in companies%}
-          <h2 class="subtitle">
-          <p><a href="{{ url_for('toggleFavourites',ticker = ticker) }}">{{name}}</a></p>
-          </h2>
-          {%endfor%}
-
-          <h1 class="title">Favourites</h1>
-          {%for ticker,name in fav%}
-          <h2 class="subtitle">
-          <p><a href="{{ url_for('toggleFavourites',ticker = ticker) }}">{{name}}</a></p>
-          </h2>
-          {%endfor%}
-
-          <h1 class="title">
-            <p><a href="{{ url_for('analyze') }}"">Analysis</a></p>
-          </h1>
+        <div class="container scroll">
+            <h1 class="title" style="color:#174c26">All Companies</h1>
+            <hr style="height:10px;background-color:black;width:100%">
+            {%for ticker,name in companies%}
+            <h2 class="subtitle" style="color:black">
+            <p><a href="{{ url_for('toggleFavourites',ticker = ticker) }}">
+                {%if (ticker,name) in fav%}
+                  <i class="fas fa-star"></i>
+                {%else%}
+                  <i class="far fa-star"></i>
+                {%endif%}
+                </a>
+                {{name}}
+                </p>
+            </h2>
+            <hr>
+            {%endfor%}
+        </div>
+        <div class="container scroll">
+            <h1 class="title" style="color:#0b035b">Favourites</h1>
+            <hr style="height:10px;background-color:black;width:100%">
+            {%for ticker,name in fav%}
+            <h2 class="subtitle"  style="color:black">
+            <p><a href="{{ url_for('toggleFavourites',ticker = ticker) }}">
+            <i class="fas fa-trash-alt"></i>
+            </a>
+            {{name}}
+            </p>
+            </h2>
+            <hr>
+            {%endfor%}
         </div>
       </div>
     </section>
