--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,7 +24,7 @@
               <div class="field">
                 <label class="label">Username</label>
                 <div class="control has-icons-left has-icons-right">
-                  <input class="input" type="text" name="username" placeholder="Username">
+                  <input class="input" type="text" name="username" placeholder="Username" required>
                   <span class="icon is-small is-left">
                     <i class="fas fa-user"></i>
                   </span>
@@ -33,21 +33,45 @@
               <div class="field">
                 <label class="label">Password</label>
                 <p class="control has-icons-left">
-                  <input class="input" type="password" name="password" placeholder="Password">
+                  <input class="input" type="password" name="password" placeholder="Password" required>
                   <span class="icon is-small is-left">
                     <i class="fas fa-lock"></i>
                   </span>
                 </p>
               </div>
               <div class="field">
+                <label class="label">Confirm Password</label>
+                <p class="control has-icons-left">
+                  <input class="input" type="password" name="password2" placeholder="Password" required>
+                  <span class="icon is-small is-left">
+                    <i class="fas fa-lock"></i>
+                  </span>
+                </p>
+              </div>
+              <div class="field">
+              <label class="label">Gender</label>
+              <p class="control has-icons-left">
+                <select class="input" name="gender">
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Agender">Agender</option>
+                    <option value="Polygender">Polygender</option>
+                </select>
+                <span class="icon is-small is-left">
+                    <i class="fas fa-transgender-alt"></i>
+                  </span>
+                </p>
+              
+              </div>
+              <div class="field">
                 <p class="control">
                   <button type="submit" class="button is-success">
-                    Login
+                    Sign-Up
                   </button>
                 </p>
               </div>
             </form>
-            <p><a href="{{ url_for('signup') }}">New user? Sign-Up instead</a></p>
+            <p><a href="{{ url_for('login') }}">Already a user? Login instead</a></p>
           </div>
         </div>
       </div>
