--- a/templates/profile.html
+++ b/templates/profile.html
@@ -83,13 +83,22 @@
         <div class="container tile" style="background-color:red">
         <a href="{{url_for('deleteAccount')}}">
           <h1 class="title">
-            <p>Delete Me <i class="fas fa-trash-alt"></i></p>
+            <p>Delete Me<i class="fas fa-trash-alt"></i></p>
           </h1>
           </a>
         </div>
       
 
+        <div class="container tile" style="background-color:#de0de5">
+          <a href="{{url_for('trending')}}">
+            <h1 class="title">
+              <p>Trends <i class="fas fa-star"></i></p>
+            </h1>
+            </a>
+          </div>
+
       </div>
+
       
     </section>
   </body>
