Added delete account, on user-delete cascade on notes

--- a/templates/graph.html
+++ b/templates/graph.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <section class="hero is-success is-fullheight">
-      <div class="hero-body">
-        <div class="container">
-            <h1>Chart</h1>
+    <div style="text-align: center;padding:20px;font-size:400%;">
+    <p>Analyze Graphs</p>
+    <hr>
+    </div>
+      <div class="hero-body" >
+        <div class="container" style="text-align:center">
             <img src="/plot.svg" alt="my plot">
         </div>
       </div>
