--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,6 +18,7 @@
             You are user number #{{g.user.id}}
           </h2>
           <p><a href="{{ url_for('logout') }}">Logout</a></p>
+          <p><a href="{{ url_for('deleteAccount') }}">Delete Account</a></p>
         </div>
       </div>
     </section>
