--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -16,8 +16,12 @@
   </head>
   <body>
     <section class="hero is-success is-fullheight">
+      <div style="text-align: center;padding:20px;font-size:400%;">
+        <p>Select companies to analyze</p>
+        <hr>
+      </div>
       <div class="hero-body">
-        <div class="container">
+        <div class="container" style="text-align:center">
 
             <h1 class="title">Favourites</h1>
             <form name="analyzeForm" method="POST">
