added count in trends

--- a/templates/trending.html
+++ b/templates/trending.html
@@ -25,6 +25,11 @@
                 background-color:#DCDCDC;
                 border-radius: 2%;
             }
+            .tab{
+                Padding-left:60px;
+                text-align-last:right;
+            }
+            
         </style>
   </head>
   <body>
@@ -36,9 +41,10 @@
     
       <div class="hero-body">
         <div class="container scroll">
-            <h1 class="title" style="color:#174c26">Trending Companies</h1>
+            
+            <h1 class="title" style="color:#174c26">Trending Companies --> Followers</h1>
             <hr style="height:10px;background-color:black;width:100%">
-            {%for ticker,name in trend%}
+            {%for ticker,name,count in trend%}
             <h2 class="subtitle" style="color:black">
             <p><a href="{{ url_for('toggleFavourites',ticker = ticker) }}">
                 {%if (ticker,name) in fav%}
@@ -47,7 +53,7 @@
                   <i class="far fa-star"></i>
                 {%endif%}
                 </a>
-                {{name}}
+                {{name}} --> {{count}}
                 </p>
             </h2>
             <hr>
