--- a/templates/trending.html
+++ b/templates/trending.html
@@ -25,10 +25,6 @@
                 background-color:#DCDCDC;
                 border-radius: 2%;
             }
-            .tab{
-                Padding-left:60px;
-                text-align-last:right;
-            }
             
         </style>
   </head>
@@ -42,7 +38,7 @@
       <div class="hero-body">
         <div class="container scroll">
             
-            <h1 class="title" style="color:#174c26">Trending Companies --> Followers</h1>
+            <h1 class="title" style="color:#174c26">Trending Companies --> Likes</h1>
             <hr style="height:10px;background-color:black;width:100%">
             {%for ticker,name,count in trend%}
             <h2 class="subtitle" style="color:black">
