--- a/templates/following.html
+++ b/templates/following.html
@@ -36,7 +36,7 @@
     
       <div class="hero-body">
         <div class="container scroll">
-            <h1 class="title" style="color:#174c26">All Users</h1>
+            <h1 class="title" style="color:#174c26">Other Users</h1>
             <hr style="height:10px;background-color:black;width:100%">
             <ul>
                 <li>
