Added folllowing page and improved front-end

--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -17,7 +17,7 @@
   <body>
     <section class="hero is-success is-fullheight">
       <div style="text-align: center;padding:20px;font-size:400%;">
-        <p>Select companies to analyze</p>
+        <p>Select companies to analyze <a href="{{url_for('profile')}}"><i class="fas fa-home"></i></a></p>
         <hr>
       </div>
       <div class="hero-body">
