--- a/templates/graph.html
+++ b/templates/graph.html
@@ -10,7 +10,7 @@
   <body>
     <section class="hero is-success is-fullheight">
     <div style="text-align: center;padding:20px;font-size:400%;">
-    <p>Analyze Graphs</p>
+    <p>Analyze Graphs <a href="{{url_for('profile')}}"><i class="fas fa-home"></i></a></p>
     <hr>
     </div>
       <div class="hero-body" >
