--- a/templates/following.html
+++ b/templates/following.html
@@ -74,20 +74,18 @@
         </div>
 
         <div class="container scroll">
-            <h1 class="title" style="color:#0b035b">Your friends like</h1>
+            <h1 class="title" style="color:#0b035b">People you follow like</h1>
             <hr style="height:10px;background-color:black;width:100%">
             {%for ticker,name in followingFav%}
             <h2 class="subtitle"  style="color:black">
             <p>
-            <a href="{{ url_for('toggleFavourites',ticker = ticker) }}">
-            <i class="fas fa-user-times"></i>
-            </a>
             {{name}}
             </p>
             </h2>
             <hr>
             {%endfor%}
         </div>
+        
       </div>
 
       </div>
